--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </head>
     <body>
         <div id="cost-pools-interactive" class="suffolkContentContainer">
+            <a href="https://dianasevillanodelazaro.ca" class="credit-link" target="_blank" rel="noopener noreferrer">Back to portfolio</a>
             <div id="step-1" class="card">
                 <div class="card__alert">
                     <section class="box">
@@ -601,17 +602,14 @@
                     </a>
                 </div>
             </div>
+            
           </div>
         <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.js" type="text/javascript"></script>
-        <script src="https://s3.amazonaws.com/keypath-coursedev/dolly/dolly.js" type="text/javascript"></script>
         <script src="dist/js/all.js"></script>
     </body>
 
 </html>
-
-<!-- 
-<iframe src="https://courseapps.online.suffolk.edu/dev/ACCT804/cost-pool-design/?name=anonymous_3_acct804_cost-pools-interactive_FAB19_master" height="1300px" width="100%" frameborder="0"></iframe> -->
